--- a/terms.html
+++ b/terms.html
@@ -43,10 +43,19 @@
       Todo el contenido de la Plataforma (marcas, logos, materiales, software, diseños) es propiedad de Ecuagraphic o de sus licenciantes. No se concede licencia alguna excepto lo necesario para usar la Plataforma conforme a estos Términos.
     </p>
 
-    <h2>6. Privacidad</h2>
+    <h2>6. Privacidad y protección de datos personales</h2>
     <p>
-      El tratamiento de datos personales se rige por la Política de Privacidad. Revísala antes de usar la Plataforma.
+    Ecuagraphic garantiza el tratamiento responsable de los datos personales conforme a la 
+    <strong>Constitución de la República del Ecuador (Art. 66 N.º 19)</strong>, la 
+    <strong>Ley Orgánica de Protección de Datos Personales (RO Suplemento 459 de 2021)</strong> y 
+    los <strong>Artículos 178, 229, 230 y 234 del Código Orgánico Integral Penal (COIP)</strong>.
     </p>
+    <p>
+    Ningún dato personal será divulgado sin consentimiento expreso del titular, salvo orden judicial o mandato legal.
+    El acceso no autorizado, la revelación o el uso indebido de información personal pueden constituir delitos
+    sancionados penalmente conforme al COIP.
+    </p>
+    <p>
 
     <h2>7. Responsabilidad</h2>
     <p>
