Update RUC number in terms.html

--- a/terms.html
+++ b/terms.html
@@ -14,7 +14,7 @@
     <h2>1. Aceptación y quiénes somos</h2>
     <p>
       Al crear una cuenta o utilizar los servicios de Ecuagraphic (“la Plataforma”), aceptas íntegramente estos Términos.
-      Ecuagraphic (RUC [por completar]), con domicilio en Bogotá Oe5‑140 y Canada, Quito, Código Postal EC170402, Ecuador.  
+      Ecuagraphic (RUC: 0502166986001 ), con domicilio en Bogotá Oe5‑140 y Canada, Quito, Código Postal EC170402, Ecuador.  
       Contacto: +593‑98‑845‑9978 / +593‑98‑614‑5404 · xsegovia@ecuagraphic.com.ec · gsilva@ecuagraphic.com.ec · https://ecuagraphic.com.ec
     </p>
 
