Update technical data description in privacy.html

--- a/privacy.html
+++ b/privacy.html
@@ -21,7 +21,7 @@
     <ul>
       <li>Identificación y contacto: nombre, cédula/RUC, email, teléfono, dirección.</li>
       <li>Datos de cuenta y uso: accesos, preferencias y soporte.</li>
-      <li>Datos técnicos: IP, sistema operativo, identificadores de dispositivo.</li>
+      <li>Datos técnicos: Sistema operativo</li>
       <li>Archivos que subas voluntariamente.</li>
     </ul>
 
